--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.1.0",
+    "@types/googlemaps": "^3.26.4",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
