--- a/package.json
+++ b/package.json
@@ -1,78 +1,80 @@
 {
-    "name": "ionic-hello-world",
-    "author": "Ionic Framework",
-    "homepage": "http://ionicframework.com/",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+  "name": "ionic-hello-world",
+  "author": "Ionic Framework",
+  "homepage": "http://ionicframework.com/",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "2.2.1",
+    "@angular/compiler": "2.2.1",
+    "@angular/compiler-cli": "2.2.1",
+    "@angular/core": "2.2.1",
+    "@angular/forms": "2.2.1",
+    "@angular/http": "2.2.1",
+    "@angular/platform-browser": "2.2.1",
+    "@angular/platform-browser-dynamic": "2.2.1",
+    "@angular/platform-server": "2.2.1",
+    "@ionic-native/calendar": "^4.2.1",
+    "@ionic-native/core": "^3.6.1",
+    "@ionic-native/native-storage": "^4.0.1",
+    "@ionic-native/onesignal": "^4.2.1",
+    "@ionic/storage": "^1.1.7",
+    "cordova-android": "^6.2.3",
+    "cordova-plugin-compat": "^1.0.0",
+    "cordova-plugin-console": "1.0.5",
+    "cordova-plugin-device": "1.1.4",
+    "cordova-plugin-googlemaps": "^2.0.11",
+    "cordova-plugin-splashscreen": "~4.0.1",
+    "cordova-plugin-statusbar": "2.2.1",
+    "cordova-plugin-whitelist": "1.3.1",
+    "intl": "^1.2.5",
+    "ionic-angular": "2.0.1",
+    "ionic-native": "2.4.1",
+    "ionic-plugin-keyboard": "~2.2.1",
+    "ionic2-calendar": "^0.3.10",
+    "ionicons": "3.0.0",
+    "moment": "^2.18.1",
+    "ng2-translate": "^5.0.0",
+    "onesignal-cordova-plugin": "^2.2.2",
+    "rxjs": "5.0.0-beta.12",
+    "sw-toolbox": "3.4.0",
+    "zone.js": "0.6.26"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "1.1.0",
+    "@types/googlemaps": "^3.26.4",
+    "typescript": "2.0.9"
+  },
+  "cordovaPlugins": [
+    "cordova-plugin-whitelist",
+    "cordova-plugin-console",
+    "cordova-plugin-device",
+    "cordova-plugin-statusbar",
+    "cordova-plugin-splashscreen",
+    "ionic-plugin-keyboard"
+  ],
+  "cordovaPlatforms": [],
+  "description": "ceupna: An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-console": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyCrBpR6i5MQAcA370Vyu9UdkGzvR_rQ86E"
+      },
+      "onesignal-cordova-plugin": {}
     },
-    "dependencies": {
-        "@angular/common": "2.2.1",
-        "@angular/compiler": "2.2.1",
-        "@angular/compiler-cli": "2.2.1",
-        "@angular/core": "2.2.1",
-        "@angular/forms": "2.2.1",
-        "@angular/http": "2.2.1",
-        "@angular/platform-browser": "2.2.1",
-        "@angular/platform-browser-dynamic": "2.2.1",
-        "@angular/platform-server": "2.2.1",
-        "@ionic-native/calendar": "^4.2.1",
-        "@ionic-native/core": "^3.6.1",
-        "@ionic-native/native-storage": "^4.0.1",
-        "@ionic-native/onesignal": "^4.2.1",
-        "@ionic/storage": "^1.1.7",
-        "cordova-android": "^6.2.3",
-        "cordova-plugin-compat": "^1.0.0",
-        "cordova-plugin-console": "1.0.5",
-        "cordova-plugin-device": "1.1.4",
-        "cordova-plugin-googlemaps": "^2.0.11",
-        "cordova-plugin-splashscreen": "~4.0.1",
-        "cordova-plugin-statusbar": "2.2.1",
-        "cordova-plugin-whitelist": "1.3.1",
-        "intl": "^1.2.5",
-        "ionic-angular": "2.0.1",
-        "ionic-native": "2.4.1",
-        "ionic-plugin-keyboard": "~2.2.1",
-        "ionic2-calendar": "^0.3.10",
-        "ionicons": "3.0.0",
-        "moment": "^2.18.1",
-        "ng2-translate": "^5.0.0",
-        "rxjs": "5.0.0-beta.12",
-        "sw-toolbox": "3.4.0",
-        "zone.js": "0.6.26"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "1.1.0",
-        "@types/googlemaps": "^3.26.4",
-        "typescript": "2.0.9"
-    },
-    "cordovaPlugins": [
-        "cordova-plugin-whitelist",
-        "cordova-plugin-console",
-        "cordova-plugin-device",
-        "cordova-plugin-statusbar",
-        "cordova-plugin-splashscreen",
-        "ionic-plugin-keyboard"
-    ],
-    "cordovaPlatforms": [],
-    "description": "ceupna: An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-console": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "cordova-plugin-googlemaps": {
-                "API_KEY_FOR_ANDROID": "AIzaSyCrBpR6i5MQAcA370Vyu9UdkGzvR_rQ86E"
-            }
-        },
-        "platforms": [
-            "android"
-        ]
-    }
+    "platforms": [
+      "android"
+    ]
+  }
 }
