--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/animations": "5.1.2",
-    "@angular/common": "5.1.2",
-    "@angular/compiler": "5.1.2",
-    "@angular/compiler-cli": "5.1.2",
-    "@angular/core": "5.1.2",
-    "@angular/forms": "5.1.2",
-    "@angular/http": "5.1.2",
-    "@angular/platform-browser": "5.1.2",
-    "@angular/platform-browser-dynamic": "5.1.2",
-    "@angular/platform-server": "5.1.2",
+    "@angular/animations": "5.1.3",
+    "@angular/common": "5.1.3",
+    "@angular/compiler": "5.1.3",
+    "@angular/compiler-cli": "5.1.3",
+    "@angular/core": "5.1.3",
+    "@angular/forms": "5.1.3",
+    "@angular/http": "5.1.3",
+    "@angular/platform-browser": "5.1.3",
+    "@angular/platform-browser-dynamic": "5.1.3",
+    "@angular/platform-server": "5.1.3",
     "@ionic-native/core": "4.5.2",
     "@ionic-native/native-storage": "^4.0.1",
     "@ionic/storage": "2.1.3",
@@ -43,7 +43,7 @@
     "ionicons": "3.0.0",
     "moment": "^2.18.1",
     "onesignal-cordova-plugin": "^2.2.2",
-    "rxjs": "^5.5.0",
+    "rxjs": "5.5.6",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
