--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cordova-plugin-compat": "^1.0.0",
     "cordova-plugin-console": "^1.0.5",
     "cordova-plugin-device": "2.0.0",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-googlemaps": "^2.1.1",
     "cordova-plugin-nativestorage": "^2.2.2",
     "cordova-plugin-splashscreen": "5.0.0",
